appId: com.mma301.lmsclassroom
env:
  MAESTRO_EMAIL: ${MAESTRO_EMAIL}
  MAESTRO_PASSWORD: ${MAESTRO_PASSWORD}
  MAESTRO_CLASS_NAME: ${MAESTRO_CLASS_NAME}
---
- runFlow: auth-and-class.yaml
- tapOn:
    text: ${MAESTRO_CLASS_NAME}
- assertVisible: "Bài tập"
- tapOn: "Bài tập"
- assertVisible: "bài tập"
